[workspace]
resolver = "2"
members = ["tokio-uring-openssl", "tonic-uring", "misc-tests"]

[workspace.dependencies]
tonic = "0.13"
prost = "0.13"
tokio-uring = { version = "0.5.0" }
tonic-build = "0.13"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
openssl = { version = "0.10", default-features = false }
openssl-sys = { version = "0.9", default-features = false }

# crate in this workspace
tokio-uring-openssl = { path = "tokio-uring-openssl" }