[workspace]
resolver = "2"
members = ["tokio-uring-openssl", "tonic-uring", "misc-tests", "tokio-uring-util"]

[workspace.dependencies]
tonic = "0.14"
prost = "0.14"
tokio-uring = { version = "0.5.0" }
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = [], default-features = false}
tokio-util = { version = "0.7", default-features = false }
openssl = { version = "0.10", default-features = false }
openssl-sys = { version = "0.9", default-features = false }
futures-util = { version = "0.3", features = ["io"] }
pin-project-lite = "0.2"
hyper = "1"
http-body-util = "0.1"
tower = "0.5"
hyper-util = "0.1"

# crate in this workspace
tokio-uring-openssl = { path = "tokio-uring-openssl" }
tokio-uring-util = { path = "tokio-uring-util" }
