[package]
name = "ktls"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { workspace = true, features = ["vendored"] , default-features = false}
openssl-sys = { workspace = true, features = ["vendored"] , default-features = false}
foreign-types-shared.workspace = true

[build-dependencies]
openssl-src = { version = "*", features = ["ktls", "legacy"], default-features = false }