[package]
name = "misc-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio-uring.workspace = true
tokio-util.workspace = true
tokio.workspace = true
openssl = { workspace = true, features = ["vendored"] , default-features = false}
openssl-sys = { workspace = true, features = ["vendored"] , default-features = false}
foreign-types-shared.workspace = true
tokio-uring-openssl.workspace = true
ktls.workspace = true
libc.workspace = true

[build-dependencies]
tonic-build.workspace = true
openssl-src = { version = "*", features = ["ktls", "legacy"], default-features = false }
