[package]
name = "misc-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio-uring.workspace = true
tokio-util.workspace = true
tokio.workspace = true
openssl.workspace = true
tokio-uring-openssl.workspace = true
tokio-uring-util.workspace = true
tonic-uring = { path = "../tonic-uring" }
hyper.workspace = true
http-body-util.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true