[package]
name = "tonic-uring-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio-uring.workspace = true
# tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true


[build-dependencies]
tonic-build.workspace = true